--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ Hawkes~=1.0.0
 matplotlib~=3.4.2
 numpy~=1.21.1
 pandas~=1.3.1
+protobuf~=3.20.3
+scienceplots~=2.1.1
 scipy~=1.7.1
 seaborn~=0.12.1
 torch~=1.8.0
